--- a/index.html
+++ b/index.html
@@ -12,37 +12,18 @@
   <section class="page active">
     <h1>Hola, amor.</h1>
     <p>
-      Antes que nada, sé que aún no somos novios,  
-      pero quiero que lo sepas: eres muy especial para mí.<br><br>
-      Ahora tienes a alguien a tu lado  
-      que está dispuesto a darlo todo en la vida contigo. ❤️
+      Mi amor, sé que el sitio es aburrido, pero es para entender una cosa...
+
+Sé que llevamos menos de un mes conociéndonos, pero creo que es mejor que entiendas de una vez que:
+
+Te quiero para toda mi vida; estoy dispuesto a estar en tus mejores días, en tus peores días, en tus mejores momentos, en tus peores momentos... aunque no lo parezca pero estoy realmente muy enamorado de ti y me enamoro mucho más cada día que pasa...
+
+Tenga en cuenta que no soy como muchos, y ni siquiera me compara con ninguno de ellos...
+
+Puede que no tenga todo lo bueno y lo mejor en material para ofrecerte, pero está garantizado mucho amor, cariño y chocolates ksksksks
+
+Me encanta estar a tu lado todos los días bebé 😍😘🫶🏾❤️
     </p>
-
-
-  </section>
-
-  <!-- Página 2 -->
-  <section class="page">
-    <p>
-      esta es una carta.<br><br>
-      No escrito en papel,<br>
-	  Pero hecho con todo lo que siento por ti.
-    </p>
-
-
-  </section>
-
-  <!-- Página 3 -->
-  <section class="page">
-    <p>
- 	  Desde que llegaste...
-	  Todo se volvió más claro.<br>
-	  Más bella.<br>
- 	  Como a mí me gusta, más agradable.
-    </p>
-
-
-  </section>
 
   <!-- Página final -->
   <section class="page">
