--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
   <section class="page active">
     <h1>Hola, amor.</h1>
     <p>
-
-      
+      <br>
       Mi amor, sé que el sitio es aburrido, pero es para entender una cosa...
 
-Sé que llevamos menos de un mes conociéndonos, pero creo que es mejor que entiendas de una vez que:
+      Sé que llevamos menos de un mes conociéndonos, pero creo que es mejor que entiendas de una vez que:
 
-Te quiero para toda mi vida; estoy dispuesto a estar en tus mejores días, en tus peores días, en tus mejores momentos, en tus peores momentos... aunque no lo parezca pero estoy realmente muy enamorado de ti y me enamoro mucho más cada día que pasa...
+      Te quiero para toda mi vida; estoy dispuesto a estar en tus mejores días, en tus peores días, en tus mejores momentos, en tus peores momentos... aunque no lo parezca pero estoy realmente muy enamorado de ti y me enamoro mucho más cada día que pasa...
 
-Tenga en cuenta que no soy como muchos, y ni siquiera me compara con ninguno de ellos...
+      Tenga en cuenta que no soy como muchos, y ni siquiera me compara con ninguno de ellos...
 
-Puede que no tenga todo lo bueno y lo mejor en material para ofrecerte, pero está garantizado mucho amor, cariño y chocolates ksksksks
+      Puede que no tenga todo lo bueno y lo mejor en material para ofrecerte, pero está garantizado mucho amor, cariño y chocolates ksksksks
 
-Me encanta estar a tu lado todos los días bebé 😍😘🫶🏾❤️
+      Me encanta estar a tu lado todos los días bebé 😍😘🫶🏾❤️
     </p>
+  </section>
 
   <!-- Página final -->
   <section class="page">
