--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>
-    <br>
-    Para ti ❤️
-  </title>
+  <title> Para ti ❤️</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
