--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       Tenga en cuenta que no soy como muchos, y ni siquiera me compara con ninguno de ellos...
       Puede que no tenga todo lo bueno y lo mejor en material para ofrecerte, pero está garantizado mucho amor, cariño y chocolates ksksksks
       Me encanta estar a tu lado todos los días bebé 😍😘🫶🏾❤️
+      ah y una cosa más... es su amor Gui quien escribió tudo esto ❤️❤️❤️❤️❤️
     </p>
   </section>
   <script src="script.js"></script>
