--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <section class="page active">
     <h1>Hola, amor.</h1>
     <p>
-      Mi amor, sé que el sitio es aburrido, pero es para entender una cosa...
-      Sé que llevamos menos de un mes conociéndonos, pero creo que es mejor que entiendas de una vez que:
-      Te quiero para toda mi vida; estoy dispuesto a estar en tus mejores días, en tus peores días, en tus mejores momentos, en tus peores momentos... aunque no lo parezca pero estoy realmente muy enamorado de ti y me enamoro mucho más cada día que pasa...
-      Tenga en cuenta que no soy como muchos, y ni siquiera me compara con ninguno de ellos...
-      Puede que no tenga todo lo bueno y lo mejor en material para ofrecerte, pero está garantizado mucho amor, cariño y chocolates ksksksks
-      Me encanta estar a tu lado todos los días bebé 😍😘🫶🏾❤️
-      ah y una cosa más... es su amor Gui quien escribió tudo esto ❤️❤️❤️❤️❤️
+      Mi amor, sé que el sitio es aburrido, pero es para entender una cosa...<br>
+      Sé que llevamos menos de un mes conociéndonos, pero creo que es mejor que entiendas de una vez que:<br>
+      Te quiero para toda mi vida; estoy dispuesto a estar en tus mejores días, en tus peores días, en tus mejores momentos, en tus peores momentos... aunque no lo parezca pero estoy realmente muy enamorado de ti y me enamoro mucho más cada día que pasa...<br>
+      Tenga en cuenta que no soy como muchos, y ni siquiera me compara con ninguno de ellos...<br>
+      Puede que no tenga todo lo bueno y lo mejor en material para ofrecerte, pero está garantizado mucho amor, cariño y chocolates ksksksks<br>
+      Me encanta estar a tu lado todos los días bebé 😍😘🫶🏾❤️<br>
+      ah y una cosa más... es su amor Gui quien escribió tudo esto ❤️❤️❤️❤️❤️<br>
     </p>
   </section>
   <script src="script.js"></script>
